Fix empty scrollbar in code snippets

--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -105,7 +105,7 @@ pre {
   border-radius: $code-border-radius;
   background-color: $code-background;
   margin: 10px 0px;
-  overflow-x: scroll;
+  overflow-x: auto;
   line-height: 1.4rem;
 }
 
